crates/agentgateway/src/llm/snapshots/agentgateway__llm__tests__responses-request_responses_basic.snap
---
source: crates/agentgateway/src/llm/tests.rs
expression: result
---
{
  "modelId": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "text": "Hello, world"
        }
      ]
    }
  ],
  "inferenceConfig": {
    "maxTokens": 1024
  }
}
