crates/agentgateway/src/llm/snapshots/agentgateway__llm__tests__responses-request_responses_instructions.snap
---
source: crates/agentgateway/src/llm/tests.rs
expression: result
---
{
  "modelId": "gpt-4o",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "text": "What is the weather like in San Francisco? Use the get_weather tool."
        }
      ]
    }
  ],
  "inferenceConfig": {
    "maxTokens": 1024
  }
}
