crates/agentgateway/src/llm/snapshots/agentgateway__llm__tests__responses-response_bedrock_to_responses_basic.snap
---
source: crates/agentgateway/src/llm/tests.rs
expression: result
---
{
  "id": "[id]",
  "status": "completed",
  "output": [
    {
      "type": "message",
      "content": [
        {
          "type": "output_text",
          "annotations": [],
          "text": "Hello world"
        }
      ],
      "id": "[id]",
      "role": "assistant",
      "status": "completed"
    }
  ],
  "model": "gpt-4o",
  "usage": {
    "input_tokens": 18,
    "output_tokens": 46
  }
}
